--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,7 @@
 
 			<div class="col-sm-6">
 				<span class="form-label"></span>
-				<input type="submit" class="btn btn-primary" value="Login" ng-disabled="loading" />
+				<input type="submit" class="btn btn-primary" value="Login" ng-disabled="isLoading" />
 			</div>
 			<div class="col-sm-6 text-right">
 				<span class="form-label"></span>
