--- a/views/player-row.html
+++ b/views/player-row.html
@@ -4,7 +4,7 @@
 
 <td class="position" ng-if="rosterchange == true"><input type="radio" ng-model="existingPlayer" name="change" ng-change="setExistingPlayer(player.id)" value="{{player.id}}" ng-disabled="rosterdisabled" ng-show="teamsPlayed.indexOf(player.team_id) < 0 && gameWeek >= currentWeek" /></td>
 
-<td class="position" ng-if="showpos == true">{{my_position || position}}</td>
+<td class="position" ng-if="showpos == true">{{ my_position || player.my_pos || player.pos }}</td>
 
 <td class="select" ng-if="changeRoster == true"><a name="selectedPosition" ng-href="{{rosterUrl}}/{{team_id}}/{{player.id}}" class="btn btn-primary btn-xs" ng-show="teamsPlayed.indexOf(player.team_id) < 0 && gameWeek >= currentWeek" ng-cloak><span class="glyphicon glyphicon-menu-hamburger"></span></a></td>
 
