--- a/views/draft.html
+++ b/views/draft.html
@@ -16,7 +16,7 @@
 		<h3>Round {{round}}</h3>
 
 		<div class="row">
-			<div class="col-sm-10" ng-class="{'col-sm-12': searchPlayer.length === 0}">
+			<div ng-class="{'col-sm-10': searchPlayer.length > 0, 'col-sm-12': !searchPlayer}">
 				<input type="text" class="form-control" ng-change="search()" ng-model="searchPlayer" placeholder="Search for Player" />
 			</div>
 			<div class="col-sm-2 text-right" ng-show="searchPlayer.length > 0">
