--- a/views/player-row.html
+++ b/views/player-row.html
@@ -9,7 +9,7 @@
 <td class="select" ng-if="changeRoster == true"><a name="selectedPosition" ng-href="{{rosterUrl}}/{{team_id}}/{{player.id}}" class="btn btn-primary btn-xs" ng-show="teamsPlayed.indexOf(player.team_id) < 0 && gameWeek >= currentWeek" ng-cloak><span class="glyphicon glyphicon-menu-hamburger"></span></a></td>
 
 <td class="player">
-	<span class="team"><img ng-src="images/teams/{{logos[player.team_id]}}.png" ng-if="player" /><img ng-src="images/team.png" ng-if="!player" /></span>
+	<span class="team"><img ng-src="images/teams/{{logos[player.team_id]}}.png" ng-if="player.id" /><img ng-src="images/team.png" ng-if="!player.id" /></span>
 	<span class="player-image" ng-if="showplayerimage">
 		<span class="image"><img ng-src="images/players/{{player.id}}.png" err-src="images/player.png" /></span>
 	</span>
