--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,7 @@
             </div>
             <div class="card-action">
               <div class="card-action-btn text-center"> 
-                <input type="submit" class="btn btn-brand waves-attach waves-button waves-light" value="Login" />
+                <button type="submit" class="btn btn-brand waves-attach waves-button waves-light">Login</button>
                 <a class="btn btn-flat waves-attach waves-button" ng-href="#/register">Register</a>
               </div>
             </div>
