--- a/views/player-row-header.html
+++ b/views/player-row-header.html
@@ -2,6 +2,7 @@
 <td class="sort" ng-if="rosterchange == true"></td>
 <td class="pos" ng-if="showpos == true">POS</td>
 <td class="select" ng-if="changeRoster == true">Move</td>
+<td class="team"></td>
 <td class="player"></td>
 <td class="opp" ng-if="showinfo">Opp</td>
 <td class="pass-yds" ng-if="showstats == true && player.pos != 'K' && player.pos != 'DEF'">Passing Yds</td>
