--- a/views/weeks.html
+++ b/views/weeks.html
@@ -8,7 +8,7 @@
 	</nav>
 </div>
 
-<div class="visible-xx-block">
+<div class="visible-xx-block container">
 	<div class="dropdown">
 	  <a class="btn btn-block dropdown-toggle-btn" data-toggle="dropdown">Week</a>
 	  <ul class="dropdown-menu nav">
