--- a/views/draft.html
+++ b/views/draft.html
@@ -1,68 +1,46 @@
-<ng-include src="'views/teams/header.html'"></ng-include>
+<div class="content-heading">
+  <h1 ng-if="!challengeID">Draft</h1>
+  <h1 ng-if="challengeID">Head to Head Draft</h1>
+</div>
 
-<div class="row">
+<div class="col-sm-12" ng-if="draft_order">
+  <h3 class="text-center" ng-show="draft_order[round] === uid" ng-cloak>Select a player below</h3>
+	<div class="alert alert-info text-center" ng-show="draft_order[round] !== uid" ng-cloak>Please wait for your turn in the next round.</div>
+</div>
 
-	<div class="col-sm-12" ng-if="challengeID" ng-cloak>
-		<h2 class="text-center">Head to Head Draft</h2>
-	</div>
+<div class="col-sm-7">
 
-	<div class="col-sm-12" ng-if="draft_order">
-        <h3 class="text-center" ng-show="draft_order[round] === uid" ng-cloak>Select a player below</h3>
-		<div class="alert alert-info text-center" ng-show="draft_order[round] !== uid" ng-cloak>Please wait for your turn in the next round.</div>
-	</div>
+  <div class="col-sm-12">
+    <h3>Round {{round}}</h3>
+  </div>
 
-	<div class="col-sm-7">
-
-		<h3>Round {{round}}</h3>
-
-		<div class="row">
-			<div ng-class="{'col-sm-10': searchPlayer.length > 0, 'col-sm-12': !searchPlayer}">
-				<input type="text" class="form-control" ng-change="search()" ng-model="searchPlayer" placeholder="Search for Player" />
-			</div>
-			<div class="col-sm-2 text-right" ng-show="searchPlayer.length > 0">
-				<a ng-click="clearSearch()" class="btn btn-block btn-default">Clear</a>
-			</div>
-			<div class="col-sm-12">
-				<div class="btn-group btn-group-justified btn-group-raised" role="group">
-					<a href ng-click="setPosition(option)" ng-repeat="option in options" ng-class="{'active': option == position}" class="btn btn-default">{{option}}</a>
-				</div>
-			</div>
-		</div>
-
-		<ul class="pager">
-            <li class="previous" ng-class="{disabled: currentPage == 0}">
-                <a href ng-click="prevPage()">« Prev</a>
-            </li>
-            <li class="next" ng-class="{disabled: currentPage == pagedItems.length - 1}">
-                <a href ng-click="nextPage()">Next »</a>
-            </li>
-        </ul>
-
-		<table class="table table-striped table-hover">
+	<!-- <div class="container table-responsive">
+		<table class="table">
+      <thead>
+        <tr ng-include src="'views/player-row-header.html'" ng-init="add = true;selected = false;showplayerimage = false;showteam = true;showpos = false;showpoints = false;" class="player-row"></tr>
+      </thead>
 			<tbody>
-				<tr ng-repeat="player in pagedItems[currentPage] | orderBy:sortingOrder:reverse | filter: searchPlayer" ng-include src="'views/player-row.html'" ng-init="position = rank.player.pos;add = true;selected = false;showplayerimage = false;showteam = true;showpos = true;" ng-show="roster.indexOf(player.name) < 0" class="player-row"></tr>
+				<tr ng-repeat="player in players" ng-include src="'views/player-row.html'" ng-init="position = rank.player.pos;add = true;selected = false;showpos=false;showteam=false;showpoints = false;" ng-show="roster.indexOf(player.name) < 0" class="player-row"></tr>
 			</tbody>
-		</table>
-
-		<ul class="pager">
-            <li class="previous" ng-class="{disabled: currentPage == 0}">
-                <a href ng-click="prevPage()">« Prev</a>
-            </li>
-            <li class="next" ng-class="{disabled: currentPage == pagedItems.length - 1}">
-                <a href ng-click="nextPage()">Next »</a>
-            </li>
-        </ul>
-
+		</table> -->
+    
+    <ng-include src="'views/player/list.html'"></ng-include>
 
 	</div>
 
-	<div class="col-sm-5">
-
-		<h3>Player Roster</h3>
-
-		<ng-include src="draftURL" onload="roster = my_players;showpos = true;showteam = true;showplayerimage = false;" ng-if="my_players"></ng-include>
-
-	</div>
+	<div class="form-group text-center">
+    <a class="btn btn-flat waves-attach waves-effect" ng-click="$parent.prevPage()"><span class="icon">chevron_left</span> Prev</a>
+      <a class="btn btn-flat waves-attach waves-effect" ng-click="$parent.nextPage()">Next <span class="icon">chevron_right</span></a>
+  </div>
 
 
 </div>
+
+<div class="col-sm-5">
+
+	<h3>Player Roster</h3>
+  
+   <ng-include src="draftURL" ng-load="roster = my_players;showpos = true;showteam = true;showplayerimage = false;" ng-if="my_players"></ng-include>
+  
+</div>
+
