--- a/views/roster.html
+++ b/views/roster.html
@@ -1,10 +1,8 @@
-<table class="table table-striped table-hover">
+<table class="table">
 	<thead>
 		<tr ng-include="'views/player-row-header.html'" class="player-row-header"></tr>
 	</thead>
 	<tbody>
-
-		<tr ng-include="'views/player-row.html'" class="player-row" ng-repeat="player in roster"></tr>
-
+		<tr ng-include="'views/player-row.html'" class="player-row" ng-init="showteam = false" ng-repeat="player in roster"></tr>
 	</tbody>
 </table>
