--- a/views/players.html
+++ b/views/players.html
@@ -1,59 +1,11 @@
 
 <div class="content-heading">
 	<h1 class="heading">Players</h1>
-	<div class="pull-right buttons">
-		<a class="btn btn-flat waves-attach waves-effect" ng-click="prevPage()"><span class="icon">chevron_left</span> Prev</a>
-    <a class="btn btn-flat waves-attach waves-effect" ng-click="nextPage()">Next <span class="icon">chevron_right</span></a>
-  </div>
 </div>
-
-<div class="col-sm-2">
-  <div class="form-group">
-    <div class="dropdown">
-        <a class="btn btn-block dropdown-toggle-btn" data-toggle="dropdown">Position</a>
-        <ul class="dropdown-menu nav">
-            <li>
-                <a ng-repeat="option in options" ng-click="changePosition(option)">{{option}}</a>
-            </li>
-        </ul>
-    </div>
-  </div>
-</div>
-<div class="col-sm-10">
-	<div class="form-group">
-		<input type="text" ng-model="searchPlayer" class="form-control" placeholder="Search Player" />
-	</div>
-</div>
-
-	<!-- <form>
-		<select class="form-control" name="position" ng-model="position"  ng-options="option for option in options"></select>
-	</form> -->
 
 <ng-include src="'views/weeks.html'"></ng-include>
 
-<ng-include src="'views/player/list.html'"></ng-include>
-
-<!-- <div class="container table-responsive visible-xx-block visible-xs-block">
-	<table class="table" ng-if="players">
-		<thead>
-			<tr ng-include src="'views/player-row-header.html'" class="player-row-header" ng-if="!selectedPlayer" ng-init="add = false;showstats = false;selected = false;showpoints = true;"></tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="player in players" ng-include src="'views/player-row.html'" ng-init="position = player.pos;add = false;selected = false;showstats = false;showpoints = true;"></tr>
-		</tbody>
-	</table>
-</div>
-
-<div class="table-responsive hidden-xx hidden-xs">
-	<table class="table" ng-if="players">
-		<thead>
-			<tr ng-include src="'views/player-row-header.html'" class="player-row-header" ng-if="!selectedPlayer" ng-init="add = false;showstats = true;selected = false;showpoints = true;"></tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="player in players" ng-include src="'views/player-row.html'" ng-init="position = player.pos;add = false;selected = false;showstats = true;showpoints = true;"></tr>
-		</tbody>
-	</table>
-</div> -->
+<ng-include src="playersList"></ng-include>
 
 <div class="form-group text-center">
 	<a class="btn btn-flat waves-attach waves-effect" ng-click="$parent.prevPage()"><span class="icon">chevron_left</span> Prev</a>
