--- a/views/error.html
+++ b/views/error.html
@@ -1,7 +1,9 @@
-<div class="card" ng-cloak ng-show="error">
+<div class="container">
+  <div class="card" ng-cloak ng-show="error">
     <div class="card-main card-red">
       <div class="card-inner">
         <p class="card-heading">{{error}}</p>
       </div>
     </div>
   </div>
+</div>
