--- a/views/login.html
+++ b/views/login.html
@@ -1,27 +1,72 @@
 
-  <ng-include src="'views/error.html'"></ng-include>
+<ng-include src="'views/error.html'"></ng-include>
 
-	<form ng-submit="doLogin()">
-
-    <div class="card">
-        <div class="card-main">
-            <div class="card-inner">
-              <div class="form-group form-group-label">
-                  <label class="floating-label" for="user">Username</label>
-                  <input class="form-control" id="user" type="text" ng-model="$parent.user"  autocomplete="new-password">
-              </div>
-              <div class="form-group form-group-label">
-                  <label class="floating-label" for="pass">Password</label>
-                  <input class="form-control" id="pass" type="password" ng-model="$parent.password"  autocomplete="new-password">
+<form ng-submit="doLogin()">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-lg-push-4 col-sm-6 col-sm-push-3">
+        <section class="content-inner">
+          <div class="card-wrap">
+            <div class="card">
+              <div class="card-main">
+                <div class="card-header">
+                  <div class="card-inner">
+                    <h1 class="card-heading">Login</h1>
+                  </div>
+                </div>
+                <div class="card-inner">
+                  <p class="text-center">
+                    <span class="avatar avatar-inline avatar-lg">
+                      <img alt="Login" src="images/users/avatar-001.jpg">
+                    </span>
+                  </p>
+                  <form class="form" action="index.html">
+                    <div class="form-group form-group-label">
+                      <div class="row">
+                        <div class="col-md-10 col-md-push-1">
+                          <label class="floating-label" for="doc_login_username">Username</label>
+                          <input class="form-control" id="user" type="text" ng-model="$parent.user" autocomplete="new-password">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group form-group-label">
+                      <div class="row">
+                        <div class="col-md-10 col-md-push-1">
+                          <label class="floating-label" for="doc_login_password">Password</label>
+                          <input class="form-control" id="pass" type="password" ng-model="$parent.password"  autocomplete="new-password">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="row">
+                        <div class="col-md-10 col-md-push-1">
+                          <button type="submit" class="btn btn-block waves-attach waves-button">Sign In</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="row">
+                        <div class="col-md-10 col-md-push-1">
+                          <div class="checkbox checkbox-adv">
+                            <label for="doc_login_remember">
+                              <input class="access-hide" id="doc_login_remember" name="doc_login_remember" type="checkbox">Stay signed in
+                              <span class="circle"></span><span class="circle-check"></span><span class="circle-icon icon">done</span>
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
-            <div class="card-action">
-              <div class="card-action-btn text-center"> 
-                <button type="submit" class="btn btn-brand waves-attach waves-button waves-light">Login</button>
-                <a class="btn btn-flat waves-attach waves-button" ng-href="#/register">Register</a>
-              </div>
-            </div>
-        </div>
+          </div>
+          <div class="clearfix">
+            <!-- <p class="margin-no-top pull-left"><a class="btn btn-flat btn-blue waves-attach" href="javascript:void(0)">Need help?</a></p> -->
+            <p class="margin-no-top pull-right"><a class="btn btn-flat btn-blue waves-attach" ng-href="#/register">Create an account</a></p>
+          </div>
+        </section>
+      </div>
     </div>
-
-	</form>
+  </div>
+</form>
