--- a/views/home.html
+++ b/views/home.html
@@ -10,10 +10,16 @@
 <div ng-show="uid" ng-cloak>
 
 	<div class="col-sm-6">
-		<h3>Latest News</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
+    <div class="card">
+        <div class="card-main">
+            <div class="card-inner container">
+          		<h3 class="margin-no">Latest News</h3>
+          		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
+          		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
+          		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
+            </div>
+          </div>
+        </div>
 	</div>
 
 	<div class="col-sm-6">
