--- a/views/login.html
+++ b/views/login.html
@@ -46,13 +46,16 @@
                     </div>
                     <div class="form-group">
                       <div class="row">
-                        <div class="col-md-10 col-md-push-1">
+                        <div class="col-md-5 col-md-push-1">
                           <div class="checkbox checkbox-adv">
                             <label for="doc_login_remember">
                               <input class="access-hide" id="doc_login_remember" name="doc_login_remember" type="checkbox">Stay signed in
                               <span class="circle"></span><span class="circle-check"></span><span class="circle-icon icon">done</span>
                             </label>
                           </div>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="margin-no pull-right"><a class="btn btn-flat btn-blue waves-attach" ng-href="#/register">Create an account</a></p>
                         </div>
                       </div>
                     </div>
@@ -61,10 +64,7 @@
               </div>
             </div>
           </div>
-          <div class="clearfix">
-            <!-- <p class="margin-no-top pull-left"><a class="btn btn-flat btn-blue waves-attach" href="javascript:void(0)">Need help?</a></p> -->
-            <p class="margin-no-top pull-right"><a class="btn btn-flat btn-blue waves-attach" ng-href="#/register">Create an account</a></p>
-          </div>
+          <div class="clearfix"></div>
         </section>
       </div>
     </div>
