--- a/views/practice.html
+++ b/views/practice.html
@@ -4,14 +4,21 @@
 
 <!-- <ng-include src="'views/weeks.html'"></ng-include> -->
 
-<div class="col-sm-12 text-right" ng-if="game > 0">
-	<h3>Points: {{your_points}}</h3>
-</div>
+<div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
+  <div class="col-sm-12 text-right" ng-if="game > 0">
+  	<h3>Points: {{your_points}}</h3>
+  </div>
 
-<div class="col-sm-12">
-    <ng-include src="'views/roster.html'" ng-init="showteam = true;roster = my_players;changeRoster = true;showpos = true;showpoints = true;" ng-if="game > 0"></ng-include>
-  <div class="text-center" ng-if="game < 1 && gameWeek === currentWeek" ng-cloak>
-    	<h2>Setup your lineup for this week</h2>
-    	<a ng-href="#/practice/draft/{{currentWeek}}" class="btn waves-attach waves-effect">Enter Draft</a>
+  <ng-include src="'views/roster.html'" ng-init="showteam = true;roster = my_players;changeRoster = true;showpos = true;showpoints = true;" ng-if="game > 0"></ng-include>
+
+  <div class="card">
+    <div class="card-main">
+      <div class="card-inner">
+        <div class="text-center" ng-if="game < 1 && gameWeek === currentWeek" ng-cloak>
+        	<h2>Setup your lineup for this week</h2>
+        	<a ng-href="#/practice/draft/{{currentWeek}}" class="btn waves-attach waves-effect">Enter Draft</a>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
